--- a/html5-css3/training/forms.html
+++ b/html5-css3/training/forms.html
@@ -2,8 +2,8 @@
 <html class="no-js">
     <head>
         <title>formulaires</title>
-        <meta charset="utf8"></meta>
-        <script src="modernizr.js"></script>
+        <meta charset="utf8" />
+        <script src="js/modernizr.js"></script>
         <link rel="stylesheet" href="css/basic.css">
     </head>
     <body>
@@ -28,7 +28,7 @@
             <div class="form-group">
                 <label for="search">Recherche</label>
                 <!-- identique à type="text" sauf que le navigateur peut générer un affichage différent -->
-                <input type="search" name="search" od="search" value="recherche" />
+                <input type="search" name="search" value="recherche" />
             </div>
 
             <div class="form-group">
