--- a/html5-css3/training/media.html
+++ b/html5-css3/training/media.html
@@ -4,7 +4,9 @@
         <title>Audio et vidéo</title>
         <meta charset="utf8"></meta>
     </head>
+
     <body>
+
         <h1>Audio element</h1>
         <audio id="musique" controls>
             <source src="donjon-episode31.ogg"></source>
@@ -21,7 +23,11 @@
             <source src="http://download.blender.org/peach/bigbuckbunny_movies/big_buck_bunny_480p_surround-fix.avi" />
         </video>
 
-        
-        
+        <h2>Image</h2>
+        <img src="img/eilean-donnan-castle-200.jpg" 
+          alt="Clock" 
+          srcset="img/eilean-donnan-castle-200.jpg 200w, img/eilean-donnan-castle-400.jpg 400w"
+          sizes="(min-width: 800px) 400px, 50vw" />
+
     </body>
 </html>
